--- a/backend/env.example
+++ b/backend/env.example
@@ -34,3 +34,10 @@ FRONTEND_URL="http://localhost:5173"
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100 
+
+
+#PARA PRUEBAS EN LOCAL 
+
+DATABASE_URL=file:./dev.db
+JWT_SECRET=menuapp-dev-secret-key
+NODE_ENV=development
