--- a/.github/workflows/ci_public_frontend.yml
+++ b/.github/workflows/ci_public_frontend.yml
@@ -2,11 +2,11 @@ name: CI Public frontend
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
     paths:
       - 'public-frontend/**'
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
     paths:
       - 'public-frontend/**'
 
