--- a/.github/workflows/reusable-frontend-ci.yml
+++ b/.github/workflows/reusable-frontend-ci.yml
@@ -12,6 +12,11 @@ on:
         required: false
         type: string
         default: '20'
+      env-vars:
+        required: false
+        description: 'json file of key pairs env vars'
+        type: string
+        default: '{"NODE_ENV": "production"}'
 
 jobs:
   ci-frontend:
@@ -27,6 +32,15 @@ jobs:
         node-version: ${{ inputs.node-version }}
         cache: 'npm'
         cache-dependency-path: ${{ inputs.frontend-path }}/package-lock.json
+
+    - name: Parse env-vars JSON into $GITHUB_ENV
+      if: inputs.env-vars != ''
+      run: |
+        echo '${{ inputs.env-vars }}' > tmp-env.json
+        for key in $(jq -r 'keys[]' tmp-env.json); do
+          value=$(jq -r ".\"$key\"" tmp-env.json)
+          echo "$key=$value" >> $GITHUB_ENV
+        done
 
     - name: Install dependencies
       run: npm ci
