fix iac condition

--- a/.github/workflows/ci_terraform.yml
+++ b/.github/workflows/ci_terraform.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [ main ]
     paths:
-      - '**/*.tf'
+      - 'iac'
   pull_request:
     branches: [ main ]
     paths:
-      - '**/*.tf'
+      - 'iac'
 
 jobs:
   ci-terraform:
