fix ci terraform pointing to main

--- a/.github/workflows/ci_terraform.yml
+++ b/.github/workflows/ci_terraform.yml
@@ -2,11 +2,11 @@ name: CI Terraform
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
     paths:
       - 'iac/**'
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
     paths:
       - 'iac/**'
 
