update role for cd terraform

--- a/.github/workflows/cd_global_terraform.yml
+++ b/.github/workflows/cd_global_terraform.yml
@@ -11,5 +11,4 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     uses: ./.github/workflows/reusable-terraform-cd.yml
     with:
-      terraform-path: 'iac/global/route53'
-      node-version: '20'
+      branch-name: ${{ github.ref_name }}
