--- a/.github/workflows/cd_global_terraform.yml
+++ b/.github/workflows/cd_global_terraform.yml
@@ -6,6 +6,9 @@ on:
     types:
       - completed
 
+permissions:
+  id-token: write
+  contents: read
 jobs:
   cd-global-terraform:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
