--- a/.github/workflows/reusable-terraform-cd.yml
+++ b/.github/workflows/reusable-terraform-cd.yml
@@ -43,7 +43,7 @@ jobs:
         terraform_version: "1.7.0"
 
     - name: Terraform Init
-      run: terraform init -backend=false
+      run: terraform init
       working-directory: ${{ inputs.terraform-path }}
 
     - name: Terraform Plan
