fix branch name missing from inputs

--- a/.github/workflows/ci_cd_public_frontend.yml
+++ b/.github/workflows/ci_cd_public_frontend.yml
@@ -28,5 +28,6 @@ jobs:
       node-version: '20'
       cloudfront-distribution-id: 'E3PVFAZHMLAOA3'
       s3-bucket-url: 's3://production-menupp-public-frontend'
+      branch-name: ${{ github.ref_name }}
 
   
