feat implement ci for backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "start": "node src/index.js",
     "dev": "cross-env nodemon src/index.js",
     "build": "echo 'No build step required'",
-    "test": "jest",
+    "test": "echo TODO jest", 
+    "lint": "echo TODO",
     "migrate": "cross-env prisma migrate dev",
     "migrate:deploy": "cross-env prisma migrate deploy",
     "db:seed": "cross-env node prisma/seed.js",
