fix need for cd admin backend terraform

--- a/.github/workflows/ci_cd_admin_backend.yml
+++ b/.github/workflows/ci_cd_admin_backend.yml
@@ -24,7 +24,7 @@ jobs:
       terraform-path: 'iac/backend'
 
   cd-admin-backend-terraform:
-    needs: ci-admin-backend-terraform:
+    needs: ci-admin-backend-terraform
     permissions:
       id-token: write
       contents: read
