add secrets TF_VAR_DATABASE_URL

--- a/.github/workflows/ci_cd_admin_backend.yml
+++ b/.github/workflows/ci_cd_admin_backend.yml
@@ -31,7 +31,8 @@ jobs:
     uses: ./.github/workflows/reusable-terraform-cd.yml
     with:
       terraform-path: 'iac/backend'
-      env-vars: '{"ENV":"production","REGION":"us-east-1","DEBUG":"false", "TF_VAR_DATABASE_URL": "${{ secrets.DATABASE_URL }}"}'
+      env-vars: '{"ENV":"production","REGION":"us-east-1","DEBUG":"false"}'
       branch-name: ${{ github.ref_name }}
       lambda-api-zip-path: 'admin-api-lambda'
-      
+    secrets:
+      TF_VAR_DATABASE_URL: ${{ secrets.DATABASE_URL }}
