--- a/.github/workflows/reusable-backend-cd.yml
+++ b/.github/workflows/reusable-backend-cd.yml
@@ -59,7 +59,7 @@ jobs:
         done
 
     - name: Install dependencies
-      run: npm ci
+      run: npm ci --omit=dev
       working-directory: ${{ inputs.backend-path }}
 
     - name: Build
