--- a/.github/workflows/ci_cd_admin_backend.yml
+++ b/.github/workflows/ci_cd_admin_backend.yml
@@ -11,6 +11,8 @@ on:
     paths:
       - 'backend/**'
       - 'iac/backend/**'
+env:
+  TF_VAR_DATABASE_URL: ${{ secrets.DATABASE_URL }}
 jobs:
   ci-admin-backend:
     uses: ./.github/workflows/reusable-backend-ci.yml
@@ -46,7 +48,7 @@ jobs:
       terraform-path: 'iac/backend'
       env-vars: |
         {
-          "TF_VAR_DATABASE_URL": "${{ secrets.MY_SECRET }}",
+          "TF_VAR_DATABASE_URL": "${{ env.DATABASE_URL }}",
           "ENV":"production",
           "REGION":"us-east-1",
           "TF_VAR_ADMIN_API_IMAGE_TAG": "${{ needs.cd-admin-backend.outputs.image-tag }}",
