update terraform cd passing env vars as inputs

--- a/.github/workflows/reusable-terraform-cd.yml
+++ b/.github/workflows/reusable-terraform-cd.yml
@@ -16,7 +16,14 @@ on:
         required: true
         description: 'current branch name'
         type: string
-
+      database-url:
+        description: 'database url'
+        required: false
+        type: string
+      admin-backend-image-tag:
+        description: 'admin backend image tag'
+        required: false
+        type: string
 permissions:
   id-token: write
   contents: read
@@ -45,18 +52,23 @@ jobs:
       run: terraform init
       working-directory: ${{ inputs.terraform-path }}
       env:
-        TF_VAR_DATABASE_URL: ${{ secrets.TF_VAR_DATABASE_URL }}
+        TF_VAR_DATABASE_URL: ${{ inputs.database-url }}
+        TF_VAR_ADMIN_BACKEND_IMAGE_TAG: ${{ inputs.admin-backend-image-tag }}
 
     - name: Terraform Plan
       run: terraform plan 
       working-directory: ${{ inputs.terraform-path }}
       env:
-        TF_VAR_DATABASE_URL: ${{ secrets.TF_VAR_DATABASE_URL }}
+        TF_VAR_DATABASE_URL: ${{ inputs.database-url }}
+        TF_VAR_ADMIN_BACKEND_IMAGE_TAG: ${{ inputs.admin-backend-image-tag }}
 
     - name: Terraform Apply
       run: terraform apply -auto-approve
       working-directory: ${{ inputs.terraform-path }}
-    
+      env:
+        TF_VAR_DATABASE_URL: ${{ inputs.database-url }}
+        TF_VAR_ADMIN_BACKEND_IMAGE_TAG: ${{ inputs.admin-backend-image-tag }}
+
     - name: Terraform Output
       run: terraform output -json
       working-directory: ${{ inputs.terraform-path }}
