fix pass secrets correctly

--- a/.github/workflows/ci_cd_admin_backend.yml
+++ b/.github/workflows/ci_cd_admin_backend.yml
@@ -51,6 +51,8 @@ jobs:
           "REGION":"us-east-1",
           "DEBUG":"false"
         } 
-      database-url: ${{ secrets.DATABASE_URL }}
       admin-backend-image-tag: ${{ needs.cd-admin-backend.outputs.image-tag }}
       branch-name: ${{ github.ref_name }}
+    secrets:
+      database-url: ${{ secrets.DATABASE_URL }}
+
