fix image tag being underscore

--- a/.github/workflows/reusable-backend-cd.yml
+++ b/.github/workflows/reusable-backend-cd.yml
@@ -33,7 +33,7 @@ jobs:
     name: cd-backend
     runs-on: ubuntu-latest
     outputs:
-        image_tag: ${{ steps.export-tag.outputs.image_tag }}
+        image-tag: ${{ steps.export-tag.outputs.image-tag }}
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
