--- a/.github/workflows/ci_cd_admin_backend.yml
+++ b/.github/workflows/ci_cd_admin_backend.yml
@@ -51,7 +51,7 @@ jobs:
           "REGION":"us-east-1",
           "DEBUG":"false"
         } 
-      admin-backend-image-tag: ${{ needs.cd-admin-backend.outputs.image-tag }}
+      admin-backend-image-tag: ${{ needs.cd-admin-backend.outputs.image_tag }}
       branch-name: ${{ github.ref_name }}
     secrets:
       database-url: ${{ secrets.DATABASE_URL }}
