--- a/.github/workflows/ci_cd_admin_backend.yml
+++ b/.github/workflows/ci_cd_admin_backend.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Debug image_tag output
         run: |
           echo "cd-admin-backend.outputs:"
-          echo '${{ toJSON(needs.cd-admin-backend.outputs) }}'
+          echo '${{needs.cd-admin-backend.outputs.image-tag}}'
 
 
   ci-admin-backend-terraform:
@@ -48,7 +48,7 @@ jobs:
       terraform-path: 'iac/backend'
 
   cd-admin-backend-terraform:
-    needs: ci-admin-backend-terraform
+    needs: [ci-admin-backend-terraform, cd-admin-backend]
     permissions:
       id-token: write
       contents: read
@@ -61,7 +61,7 @@ jobs:
           "REGION":"us-east-1",
           "DEBUG":"false"
         } 
-      admin-backend-image-tag: ${{ needs.cd-admin-backend.outputs.image_tag }}
+      admin-backend-image-tag: ${{ needs.cd-admin-backend.outputs.image-tag }}
       branch-name: ${{ github.ref_name }}
     secrets:
       database-url: ${{ secrets.DATABASE_URL }}
