--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "start": "node src/index.js",
     "dev": "cross-env nodemon src/index.js",
     "build": "echo 'No build step required '",
-    "tests": "echo TODO jest", 
+    "tests": "echo TODO jest",
     "lint": "echo TODO",
     "migrate": "cross-env prisma migrate dev",
     "migrate:deploy": "cross-env prisma migrate deploy",
@@ -27,6 +27,7 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "@supabase/supabase-js": "^2.53.0",
     "aws-sdk": "^2.1490.0",
     "bcryptjs": "^2.4.3",
     "bull": "^4.12.0",
@@ -59,4 +60,3 @@
     "node": ">=18.0.0"
   }
 }
- 
