add wrapper to support lambda

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "cross-env nodemon src/index.js",
+    "dev": "cross-env nodemon src/dev.js",
     "build": "echo 'No build step required '",
     "tests": "echo TODO jest",
     "lint": "echo TODO",
@@ -26,6 +26,7 @@
   "author": "MenuApp Team",
   "license": "MIT",
   "dependencies": {
+    "@codegenie/serverless-express": "^4.17.0",
     "@prisma/client": "^5.6.0",
     "@supabase/supabase-js": "^2.53.0",
     "aws-sdk": "^2.1490.0",
