add prisma generate

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /var/task
 COPY package*.json ./
 RUN npm install --production
 
+RUN npx prisma generate
+
 COPY . .
 
 CMD ["src/index.handler"]
