Add env vars backend

--- a/.github/workflows/ci_cd_admin_backend.yml
+++ b/.github/workflows/ci_cd_admin_backend.yml
@@ -55,4 +55,6 @@ jobs:
       branch-name: ${{ github.ref_name }}
     secrets:
       database-url: ${{ secrets.DATABASE_URL }}
+      supabase-url: ${{ secrets.SUPABASE_URL }}
+      supabase-service-key: ${{ secrets.SUPABASE_SERVICE_KEY }}
 
