--- a/.github/workflows/ci_cd_landing_frontend.yml
+++ b/.github/workflows/ci_cd_landing_frontend.yml
@@ -16,7 +16,17 @@ jobs:
     with:
       frontend-path: 'frontends/landing'
       node-version: '20'
-  
 
-
+  cd-landing-frontend:
+    permissions:
+      id-token: write
+      contents: read
+    needs: ci-landing-frontend
+    uses: ./.github/workflows/reusable-frontend-cd.yml
+    with:
+      frontend-path: 'frontends/landing'
+      node-version: '20'
+      cloudfront-distribution-id: 'E3PVFAZHMLAOA3'
+      s3-bucket-url: 's3://production-menapp-landing-frontend'
+      branch-name: ${{ github.ref_name }}
   
