allow manual trigger for workflows

--- a/.github/workflows/ci_cd_admin_frontend_terraform.yml
+++ b/.github/workflows/ci_cd_admin_frontend_terraform.yml
@@ -9,6 +9,7 @@ on:
     branches: [ master ]
     paths:
       - 'iac/admin-frontend/**'
+  workflow_dispatch:
 
 jobs:
   ci-admin-frontend-terraform:
