--- a/.github/workflows/ci_cd_landing_frontend_terraform.yml
+++ b/.github/workflows/ci_cd_landing_frontend_terraform.yml
@@ -9,6 +9,7 @@ on:
     branches: [ master ]
     paths:
       - 'iac/public-frontend/landing/**'
+  workflow_dispatch:
 
 jobs:
   ci-landing-frontend-terraform:
