--- a/.github/workflows/ci_cd_restaurants_frontend_terraform.yml
+++ b/.github/workflows/ci_cd_restaurants_frontend_terraform.yml
@@ -9,6 +9,7 @@ on:
     branches: [ master ]
     paths:
       - 'iac/public-frontend/restaurants/**'
+  workflow_dispatch:
 
 jobs:
   ci-restaurants-frontend-terraform:
