--- a/.github/workflows/ci_cd_public_frontend_terraform.yml
+++ b/.github/workflows/ci_cd_public_frontend_terraform.yml
@@ -9,6 +9,7 @@ on:
     branches: [ master ]
     paths:
       - 'iac/public-frontend/*'
+  workflow_dispatch:
 
 jobs:
   ci-public-frontend-terraform:
