--- a/.github/workflows/ci_cd_restaurants_frontend.yml
+++ b/.github/workflows/ci_cd_restaurants_frontend.yml
@@ -9,6 +9,7 @@ on:
     branches: [ master ]
     paths:
       - 'frontends/restaurants/**'
+  workflow_dispatch:
 
 jobs:
   ci-restaurants-frontend:
