--- a/.github/workflows/ci_cd_admin_frontend.yml
+++ b/.github/workflows/ci_cd_admin_frontend.yml
@@ -18,11 +18,32 @@ jobs:
       frontend-path: 'frontends/admin'
       node-version: '20'
   
+  generate-env-vars:
+    runs-on: ubuntu-latest
+    outputs:
+      env-vars: ${{ steps.generate-env-json.outputs.env-vars }}
+    steps:
+      - name: Generate environment variables JSON
+        id: generate-env-json
+        run: |
+          cat << EOF > env-vars.json
+          {
+            "ENV": "production",
+            "REGION": "us-east-1",
+            "DEBUG": "false",
+            "VITE_API_URL": "${{ vars.ADMIN_API_URL }}",
+            "VITE_SUPABASE_URL": "${{ secrets.SUPABASE_URL }}",
+            "VITE_SUPABASE_ANON_KEY": "${{ vars.SUPABASE_ANON_KEY }}"
+          }
+          EOF
+          
+          echo "env-vars=$(cat env-vars.json | jq -c .)" >> $GITHUB_OUTPUT
+  
   cd-admin-frontend:
     permissions:
       id-token: write
       contents: read
-    needs: ci-admin-frontend
+    needs: [ci-admin-frontend, generate-env-vars]
     uses: ./.github/workflows/reusable-frontend-cd.yml
     with:
       frontend-path: 'frontends/admin'
@@ -30,11 +51,5 @@ jobs:
       cloudfront-distribution-id: 'E2Q2BA3Q2EDJ7'
       s3-bucket-url: 's3://production-menapp-admin-frontend'
       branch-name: ${{ github.ref_name }}
-    env:
-      ENV: production
-      REGION: us-east-1
-      DEBUG: false
-      VITE_API_URL: ${{ vars.ADMIN_API_URL }}
-      VITE_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-      VITE_SUPABASE_ANON_KEY: ${{ vars.SUPABASE_ANON_KEY }}
+      env-vars: ${{ needs.generate-env-vars.outputs.env-vars }}
   
