--- a/.github/workflows/ci_cd_admin_frontend.yml
+++ b/.github/workflows/ci_cd_admin_frontend.yml
@@ -32,7 +32,7 @@ jobs:
             "REGION": "us-east-1",
             "DEBUG": "false",
             "VITE_API_URL": "${{ vars.ADMIN_API_URL }}",
-            "VITE_SUPABASE_URL": "${{ secrets.SUPABASE_URL }}",
+            "VITE_SUPABASE_URL": "${{ vars.SUPABASE_URL }}",
             "VITE_SUPABASE_ANON_KEY": "${{ vars.SUPABASE_ANON_KEY }}"
           }
           EOF
