update pass variables as base64

--- a/.github/workflows/ci_cd_admin_frontend.yml
+++ b/.github/workflows/ci_cd_admin_frontend.yml
@@ -36,8 +36,8 @@ jobs:
             "VITE_SUPABASE_ANON": "${{ vars.SUPABASE_ANON }}"
           }
           EOF
-          
-          echo "env-vars=$(cat env-vars.json | jq -c .)" >> $GITHUB_OUTPUT
+
+          echo "env-vars=$(cat env-vars.json | base64 -w 0)" >> $GITHUB_OUTPUT
   
   cd-admin-frontend:
     permissions:
